--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,43 @@
 stages:
-  - test
-  - build_python
-  - build_docker
-  - build_documentation
-  - push_python
-  - push_docker
-  - push_documentation
-  - deploy
+  - stage_test
+  - stage_build_python
+  - stage_build_docker
+  - stage_build_documentation
+  - stage_push_python
+  - stage_push_docker
+  - stage_push_documentation
+  - stage_deploy
 
 # Docker
+
 job_docker_build:
-  stage: build_docker
+  stage: stage_build_docker
   image: docker:latest
   services:
     - docker:dind
+    - postgres:9.6-alpine
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE" -f docker/Dockerfile .
     - DOCKER_VERSION=`cat docker/rootfs/version`
     - docker tag "$CI_REGISTRY_IMAGE" "$CI_REGISTRY_IMAGE:$DOCKER_VERSION"
-    - docker run --rm "$CI_REGISTRY_IMAGE:$DOCKER_VERSION" run_tests
+    - SERVICE_POSTGRES_IP=$(cat /etc/hosts | awk '{if ($2 == "postgres") print $1;}')
+    - docker run --rm --add-host="postgres:$SERVICE_POSTGRES_IP" -e MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.postgresql_psycopg2','NAME':'mayan_edms','USER':'postgres','PASSWORD':'postgres','HOST':'postgres'}}" "$CI_REGISTRY_IMAGE:$DOCKER_VERSION" run_tests
     - docker push "$CI_REGISTRY_IMAGE:$DOCKER_VERSION"
     - docker logout
   only:
     - releases/all
     - releases/all_minor
     - releases/docker
+  tags:
+    - postgres
+  variables:
+    POSTGRES_DB: "mayan_edms"
+    POSTGRES_PASSWORD: "postgres"
 
 job_docker_push:
-  stage: push_docker
+  stage: stage_push_docker
   image: docker:latest
   services:
     - docker:dind
@@ -58,7 +66,7 @@ job_docker_push:
     - releases/docker
 
 job_docker_push_minor:
-  stage: push_docker
+  stage: stage_push_docker
   image: docker:latest
   services:
     - docker:dind
@@ -78,7 +86,7 @@ job_docker_push_minor:
     - releases/docker
 
 job_docker_nightly:
-  stage: build_docker
+  stage: stage_build_docker
   image: docker:latest
   services:
     - docker:dind
@@ -86,27 +94,28 @@ job_docker_nightly:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" -f docker/Dockerfile .
-    - docker run --rm "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" run_tests
     - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
+    - docker logout
   only:
     - nightly
     - staging
 
 # Documentation
+
 job_documentation_build:
-  stage: build_documentation
-  image: ubuntu:19.10
+  stage: stage_build_documentation
+  image: debian:10.7-slim
   artifacts:
     expire_in: 2 hr
     paths:
     - docs
   before_script:
     - apt-get -qq update
-    - apt-get install -qq enchant make python-dev python-virtualenv python3-dev
-    - virtualenv venv -p /usr/bin/python3
+    - apt-get install -qq enchant make python3-venv python3-dev
+    - python3 -m venv venv
     - . venv/bin/activate
   script:
-    - pip install -r requirements/documentation.txt
+    - pip install --requirement requirements/documentation.txt
     - cd docs
     - make html
   only:
@@ -114,14 +123,14 @@ job_documentation_build:
     - releases/documentation
 
 job_documentation_push:
-  stage: push_documentation
-  image: ubuntu:19.10
+  stage: stage_push_documentation
+  image: debian:10.7-slim
   before_script:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - echo "$DOCUMENTATION_SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client rsync -y )'
+    - 'which ssh-agent || ( apt-get update --yes && apt-get install -qq openssh-client rsync --yes )'
     - eval $(ssh-agent -s)
     - echo "$DOCUMENTATION_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
   script:
@@ -132,20 +141,21 @@ job_documentation_push:
     - releases/documentation
 
 # Python
+
 job_build_python:
-  stage: build_python
-  image: ubuntu:19.10
+  stage: stage_build_python
+  image: debian:10.7-slim
   artifacts:
     expire_in: 2 hr
     paths:
     - dist
   before_script:
     - apt-get -qq update
-    - apt-get install -qq make python-dev python-virtualenv python3-dev
-    - virtualenv venv -p /usr/bin/python3
+    - apt-get install -qq make python3-venv python3-dev
+    - python3 -m venv venv
     - . venv/bin/activate
   script:
-    - pip install -r requirements/build.txt
+    - pip install --requirement requirements/build.txt
     - make python-wheel
   only:
     - releases/all
@@ -153,15 +163,15 @@ job_build_python:
     - releases/python
 
 job_push_python:
-  stage: push_python
-  image: ubuntu:19.10
+  stage: stage_push_python
+  image: debian:10.7-slim
   before_script:
     - apt-get -qq update
-    - apt-get install -qq make python-dev python-virtualenv python3-dev
-    - virtualenv venv -p /usr/bin/python3
+    - apt-get install -qq make python3-venv python3-dev
+    - python3 -m venv venv
     - . venv/bin/activate
   script:
-    - pip install -r requirements/build.txt
+    - pip install --requirement requirements/build.txt
     - echo "$PYPIRC" > ~/.pypirc
     - twine upload dist/* -r pypi
   only:
@@ -170,20 +180,24 @@ job_push_python:
     - releases/python
 
 # Run the test suit
-.test_base: &test_base
-  stage: test
-  image: ubuntu:19.10
+
+.job_test_base: &job_test_base
+  stage: stage_test
+  image: debian:10.7-slim
   cache:
     paths:
       - ~/.cache/pip/
       - /var/cache/apt/archives/
   before_script:
     - set -a && . ./config.env && set +a
+    - echo "deb http://deb.debian.org/debian buster-backports main contrib non-free" >> /etc/apt/sources.list
+    - echo "deb-src http://deb.debian.org/debian buster-backports main contrib non-free" >> /etc/apt/sources.list
     - apt-get -qq update
-    - apt-get install -qq curl exiftool firefox-geckodriver gcc ghostscript gnupg1 graphviz libfuse2 libjpeg-dev libmagic1 libpng-dev libtiff-dev libreoffice make poppler-utils python-dev python-virtualenv python3-dev sane-utils tesseract-ocr tesseract-ocr-deu
-    - virtualenv venv -p /usr/bin/python3
+    - apt-get install --yes --no-install-recommends --target-release buster-backports -qq libreoffice-calc-nogui libreoffice-draw-nogui libreoffice-impress-nogui libreoffice-math-nogui libreoffice-writer-nogui
+    - apt-get install --yes --no-install-recommends -qq curl exiftool gcc ghostscript gnupg1 graphviz libfuse2 libjpeg-dev libmagic1 libpng-dev libtiff-dev make poppler-utils python3-venv python3-dev sane-utils tesseract-ocr tesseract-ocr-deu
+    - python3 -m venv venv
     - . venv/bin/activate
-    - pip install -r requirements.txt -r requirements/testing-base.txt
+    - pip install --requirement requirements.txt --requirement requirements/testing-base.txt --requirement requirements/build.txt
   only:
     - releases/all
     - releases/all_minor
@@ -192,8 +206,8 @@ job_push_python:
     - staging
     - nightly
 
-test-mysql:
-  <<: *test_base
+job_test_mysql:
+  <<: *job_test_base
   variables:
     MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     MYSQL_DATABASE: "mayan_edms"
@@ -209,8 +223,8 @@ test-mysql:
   tags:
     - mysql
 
-test-postgres:
-  <<: *test_base
+job_test_postgres:
+  <<: *job_test_base
   variables:
     POSTGRES_DB: "mayan_edms"
     POSTGRES_PASSWORD: "postgres"
@@ -225,8 +239,8 @@ test-postgres:
   tags:
     - postgres
 
-test-sqlite:
-  <<: *test_base
+job_test_sqlite:
+  <<: *job_test_base
   script:
     - . venv/bin/activate
     - python manage.py test --mayan-apps --settings=mayan.settings.testing.gitlab-ci --nomigrations
@@ -234,10 +248,11 @@ test-sqlite:
     - make test-all-migrations
 
 # Deploy
-deploy_demo:
+
+job_deploy_demo:
   environment:
     name: demo
-  stage: deploy
+  stage: stage_deploy
   before_script:
     - mkdir -p ~/.ssh
     - echo "${DEMO_SSH_KNOWN_HOST}" > ~/.ssh/known_hosts
@@ -249,10 +264,10 @@ deploy_demo:
     - ssh root@$DEMO_IP_ADDRESS "DELETE_VOLUMES=true ./docker.sh"
   when: manual
 
-deploy_staging:
+job_deploy_staging:
   environment:
     name: staging
-  stage: deploy
+  stage: stage_deploy
   before_script:
     - mkdir -p ~/.ssh
     - echo "${STAGING_SSH_KNOWN_HOST}" > ~/.ssh/known_hosts
