--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -288,9 +288,8 @@ job_test_mysql:
     - . venv/bin/activate
     - pip install mysqlclient==$PYTHON_MYSQL_VERSION
     - mysql -h"$MYSQL_PORT_3306_TCP_ADDR" -P"$MYSQL_PORT_3306_TCP_PORT" -uroot -p"$MYSQL_ENV_MYSQL_ROOT_PASSWORD" -e "set global character_set_server=utf8mb4;"
-    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci.db_mysql
-    - pip install dist/mayan_edms-*.whl
-    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci.db_mysql
+    - make test-all SETTINGS=mayan.settings.testing.gitlab-ci.db_mysql
+    - make test-all-migrations SETTINGS=mayan.settings.testing.gitlab-ci.db_mysql
   tags:
     - mysql
 
