Fix GitLab CI stage name
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ job_docker_build:
   services:
     - docker:dind
     - postgres:9.6-alpine
-  stage: build_docker
+  stage: stage_build_docker
   tags:
     - postgres
   variables:
