Fix job_docker_nightly job stage name
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,7 +124,7 @@ job_docker_nightly:
     - docker logout
   services:
     - docker:dind
-  stage: build_docker
+  stage: stage_build_docker
 
 job_docker_testing:
   before_script:
