--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       POSTGRES_DB: ${MAYAN_DATABASE_DB:-mayan}
       POSTGRES_PASSWORD: ${MAYAN_DATABASE_PASSWORD:-mayandbpass}
       POSTGRES_USER: ${MAYAN_DATABASE_USER:-mayan}
-    image: postgres:10.14-alpine
+    image: postgres:10.15-alpine
     networks:
       - bridge
     restart: unless-stopped
@@ -69,7 +69,7 @@ services:
       - "256"
       - --requirepass
       - "${MAYAN_REDIS_PASSWORD:-mayanredispassword}"
-    image: redis:5.0-alpine
+    image: redis:6.0-alpine
     networks:
       - bridge
     restart: unless-stopped
@@ -121,7 +121,7 @@ services:
   #     # - rabbitmq
   #   environment:
   #     <<: *mayan_env
-  #   image: mayanedms/mayanedms:3
+  #   image: mayanedms/mayanedms:s4.0
   #   networks:
   #     - bridge
   #   restart: unless-stopped
@@ -139,7 +139,7 @@ services:
   #     # - rabbitmq
   #   environment:
   #     <<: *mayan_env
-  #   image: mayanedms/mayanedms:3
+  #   image: mayanedms/mayanedms:s4.0
   #   networks:
   #     - bridge
   #   ports:
