Also build and push Python packages for testing
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,6 +199,7 @@ job_build_python:
     - releases/all
     - releases/all_minor
     - releases/python
+    - releases/testing
   script:
     - pip install --requirement requirements/build.txt
     - make python-wheel
@@ -215,6 +216,7 @@ job_push_python:
     - releases/all
     - releases/all_minor
     - releases/python
+    - releases/testing
   script:
     - pip install --requirement requirements/build.txt
     - echo "$PYPIRC" > ~/.pypirc
