Add LibSSL development library
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -191,7 +191,7 @@ job_build_python:
     - dist
   before_script:
     - apt-get -qq update
-    - apt-get install -qq make python3-venv python3-dev rustc
+    - apt-get install -qq libssl-dev make python3-venv python3-dev rustc
     - python3 -m venv venv
     - . venv/bin/activate
   image: debian:10.7-slim
