Specify which PIP version to use
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -22,6 +22,7 @@ PYTHON_AMQP_VERSION=2.5.2
 PYTHON_FLOWER_VERSION=0.9.3
 PYTHON_MYSQL_VERSION=1.4.6
 PYTHON_ORACLE_VERSION=7.2.3
+PYTHON_PIP_VERSION=21.0.1
 PYTHON_PSYCOPG2_VERSION=2.8.4
 PYTHON_PSUTIL_VERSION=5.7.0
 PYTHON_REDIS_VERSION=3.4.1
