--- a/config.env
+++ b/config.env
@@ -13,6 +13,7 @@ PYTHON_FLOWER_VERSION=0.9.3
 PYTHON_LIBRABBITMQ_VERSION=2.0.0
 PYTHON_MYSQL_VERSION=1.4.4
 PYTHON_ORACLE_VERSION=7.2.3
+PYTHON_PIP_VERSION=21.0.1
 PYTHON_PSYCOPG2_VERSION=2.8.3
 PYTHON_PSUTIL_VERSION=5.6.2
 PYTHON_REDIS_VERSION=3.3.11
